# sf-macos

./: .gitignore  Cargo.toml  Dockerfile  README.md  SPECS.md  docker-compose.yml  sf_data.json
SF.app/Contents/: Info.plist
SF.app/Contents/MacOS/: sf-macos
SF.app/Contents/Resources/: AppIcon.icns
crates/sf-app/: Cargo.toml
crates/sf-app/src/: main.rs
crates/sf-app/src/app/: menu.rs  mod.rs  state.rs  window.rs
crates/sf-core/: Cargo.toml
crates/sf-core/src/: lib.rs
crates/sf-core/src/agent/: executor.rs  mod.rs
crates/sf-core/src/llm/: azure.rs  client.rs  minimax.rs  mistral.rs  mod.rs  ollama.rs
crates/sf-core/src/patterns/: engine.rs  mod.rs
crates/sf-core/src/tools/: file.rs  git.rs  http.rs  memory.rs  mod.rs  runner.rs  search.rs  shell.rs
crates/sf-db/: Cargo.toml
crates/sf-db/src/: lib.rs  migrations.rs  models.rs  store.rs
crates/sf-remote/: Cargo.toml
crates/sf-remote/src/: instance.rs  keychain.rs  lib.rs  oauth.rs  sse.rs
docs/: conventions.md  schema.md  security.md  spec.md  workflows.md
src/: __init__.py
