[workspace]
resolver = "2"
members = [
    "crates/sf-app",
    "crates/sf-core",
    "crates/sf-db",
    "crates/sf-remote",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "sync"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
rusqlite    = { version = "0.32", features = ["bundled"] }
objc2       = "0.5"
objc2-app-kit    = { version = "0.2", features = ["NSApplication", "NSWindow", "NSSplitViewController", "NSViewController", "NSStatusBar", "NSMenu", "NSMenuItem", "NSTextView", "NSScrollView", "NSButton", "NSTextField", "NSTableView", "NSRunningApplication", "NSGraphics", "NSResponder", "NSView", "NSColor", "NSBox", "NSStackView", "NSVisualEffectView", "NSEvent"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSDictionary", "NSTimer", "NSThread", "NSRunLoop"] }
objc2-web-kit    = { version = "0.2", features = ["WKWebView", "WKWebViewConfiguration", "WKNavigationDelegate", "objc2-app-kit", "WKNavigation"] }
sha2        = "0.10"
base64      = "0.22"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex       = "1"
async-trait = "0.1"
futures-util = "0.3"

[workspace.metadata]
# Software Factory — macOS native app
# Architecture: Full Rust, zero runtime deps (no Python, no swift-bridge)
# LLM: Ollama (local) + Azure OpenAI + MiniMax (remote)
# UI: AppKit via objc2 direct bindings
# Remote: HTTP REST + SSE consumer + OAuth2 PKCE
