[package]
name = "sf-app"
version = "0.1.0"
edition = "2021"
description = "Software Factory macOS app — AppKit UI via objc2"

[[bin]]
name = "sf-macos"
path = "src/main.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
objc2       = { workspace = true }
objc2-app-kit    = { workspace = true }
objc2-foundation = { workspace = true }
objc2-web-kit    = { workspace = true }

sf-core     = { path = "../sf-core" }
sf-db       = { path = "../sf-db" }
sf-remote   = { path = "../sf-remote" }
