[package]
name = "sf-core"
version = "0.1.0"
edition = "2021"
description = "Software Factory core: AgentExecutor, LlmClient, PatternEngine, ToolRunner"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
regex       = { workspace = true }
sha2        = { workspace = true }
base64      = { workspace = true }

sf-db       = { path = "../sf-db" }
async-trait = { workspace = true }
