[package]
name = "sf-db"
version = "0.1.0"
edition = "2021"
description = "Software Factory local SQLite store (rusqlite bundled)"

[dependencies]
rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
