[package]
name = "sf-remote"
version = "0.1.0"
edition = "2021"
description = "Remote SF instances: HTTP API client, SSE consumer, OAuth2 PKCE, Keychain"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
sha2        = { workspace = true }
base64      = { workspace = true }
objc2       = { workspace = true }
objc2-foundation = { workspace = true }

sf-core     = { path = "../sf-core" }
sf-db       = { path = "../sf-db" }
futures-util = { workspace = true }
